--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/sun-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Weather forecast</title>
+  <link rel="stylesheet" href="./src/calendar.css">
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
